refactor according alibaba rules